# graph-lab

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  GLTF_IMPLEMENTATION.md  LICENSE  PBR_IMPLEMENTATION.md  PBR_SUMMARY.md  README.md
.devcontainer/: devcontainer.json
.devtools/: requirements.txt
assets/models/: README.md  cube.gltf  generate_cube.py
include/: example_lib.hpp
include/gfx/: mesh_renderer_opengl.hpp  mesh_renderer_vulkan.hpp  renderer.hpp  renderer_opengl.hpp  renderer_vulkan.hpp  window.hpp  window_glfw.hpp
include/util/: glm.hpp  gltf_loader.hpp  types.hpp
scripts/: dev.sh  devtools.sh  setup.sh
src/apps/: demo2d.cpp  demo3d.cpp  example.cpp  gltf_viewer.cpp  simple.cpp
src/example_lib/: example_lib.cpp
src/gfx/: mesh_renderer_opengl.cpp  mesh_renderer_vulkan.cpp  renderer_opengl.cpp  renderer_vulkan.cpp  window_glfw.cpp
src/util/: gltf_loader.cpp
tests/: test_example.cpp
